# bigsaltyfishes.github.io

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  Trunk.toml  compile_assets.sh  config.yaml  index.html  index.xml  integrity_update.py  package-lock.json  package.json  postcss.config.js  sitemap.xml  tailwind.config.js
.github/workflows/: build_and_deploy_to_pages.yaml
about/: index.html
archives/: index.html
assets/: autoload.js  site.json
assets/articles/: index.json  special.json
assets/articles/about/: index.md  meta.json
assets/articles/first-post/: index.md  meta.json
assets/articles/rust-and-wasm/: meta.json
categories/: index.html  index.xml
categories/aosp/: index.html  index.xml
categories/hello-world/: index.html  index.xml
categories/page/1/: index.html
content/categories/aosp/: _index.md
content/categories/hello-world/: _index.md
links/: index.html
p/build-android/: index.html
p/test-chinese/: index.html
page/: index.html  index.xml
page/1/: index.html
page/page/1/: index.html
post/: index.html  index.xml
scripts/: compress_assets.sh  generate_index.sh  highlighter.js  integrity_update.py
scripts/nu/: compile_assets.nu  compress_assets.nu  generate_index.nu
scss/: _articles.scss  _base.scss  _colors.scss  _layout.scss  _loading.scss  _markdown.scss  _mixins.scss  _navbar.scss  _switch.scss  _variables.scss  main.scss
search/: index.html  index.json
src/: app.rs  bindgen.rs  main.rs  models.rs  router.rs
src/components/: error_page.rs  footer.rs  layout.rs  mod.rs  navbar.rs  progress_bar.rs  theme_toggle.rs
src/pages/: article_view.rs  articles_list.rs  error_pages.rs  home.rs  mod.rs
src/types/: site.rs
src/utils/: mod.rs
styles/: animations.css  base.css  input.css  layout.css  syntax-highlighting.css  tailwind.config.js  utilities.css
styles/components/: article-card.css  articles-list.css  articles-pagination.css  articles-title.css  error-page.css  footer.css  home.css  navbar.css  progress-bar.css  theme-toggle.css
styles/fonts/: material-symbols-outlined.css
styles/plugins/: material-colors.mjs
tags/: index.html  index.xml
(+20 files in other folders)
