[package]
name = "molyuu-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "router"] }
dioxus-signals = "0.6.3"
pulldown-cmark = { version = "0.13.0" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3.77", features = [
    "MediaQueryList",
    "Element",
    "HtmlElement",
    "HtmlBodyElement",
    "HtmlInputElement",
    "DomTokenList",
    "Window",
    "Document",
    "Storage",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde-json-wasm = "1.0.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
once_cell = "1.21.3"
gloo-net = { version = "0.6.0", features = ["futures-io"] }
lazy_static = "1.5.0"
katex-wasmbind = "0.10.0"
log = "0.4.27"
wasm-logger = "0.2.0"
web-time = "1.1.0"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
